--- a/_posts/2017-12-18-book1.md
+++ b/_posts/2017-12-18-book1.md
@@ -10,7 +10,7 @@ categories:
 -프로시저로 프로그램을 구성하는 기법을 절차지향 프로그래밍이라고한다.<br/>
 -절차지향은 데이터를 중심으로 한 프로시저로 구성된다.<br/>
 <blockquote>
-**성적평균을 계산하고 출력하는 프로그램<br/>
+*성적평균을 계산하고 출력하는 프로그램<br/>
 - '평균계산 프로시저'와 '화면출력 프로시저'는 데이터를 공유해서 사용한다. <br/>
 - 자연스럽게 데이터를 중심으로 구현된다.<br/>
 - 최초에는 코드를 구현하는 것이 쉽다. 하지만, 규모가 커질수록 수정이 힘들다.<br/>
@@ -23,7 +23,7 @@ categories:
 -이때 프로시저는 자신이 속한 개체의 데이터에만 접근할 수 있으며, 다른 객체에 속한 데이터에는 접근할 수 없다.<br/>
 -객체의 데이터를 변경하더라도 해당 객체로만 변화가 집중되고 다른 객체에는 영향을 주지 않기 때문에, 유연하다.<br/>
 
-### 1-2. 객체<br/>
+### 객체<br/>
 -객체의 핵심은 기능을 제공하는 것<br/>
 -객체가 정의할 때 사용되는 것은 객체가 제공해야 할 기능이며, 객체가 내부적으로 어떤 데이터를 갖고 있는 지 정의되지 않는다.<br/>
 <blockquote>
@@ -32,7 +32,7 @@ categories:
 - 내부적으로 소리크기를 어떤 데이터 타입값으로 보관하는지는 중요하지 않다. 3개의 기능을 제공한다는 것이 중요할 뿐이다.<br/>
 </blockquote>
 
-### 1-3. 인터페이스와 클래스<br/>
+### 인터페이스와 클래스<br/>
 -보통 객체가 제공하는 기능을 오퍼레이션이라고 부른다. 즉 객체는 오퍼레이션으로 정의된다.<br/>
 -객체가 제공하는 기능을 사용한다는 것은 결국 객체의 오퍼레이션을 사용한다는 의미가 된다.<br/>
 -객체가 제공하는 오퍼레이션을 사용할 수 있으려면, 그 사용법을 알아야한다.<br/>
