--- a/_posts/2017-12-18-book2.md
+++ b/_posts/2017-12-18-book2.md
@@ -6,7 +6,7 @@ categories:
 ## 메시지<br/>
 - 오퍼레이션의 실행을 요청하는 것을 '메시지를 보낸다'라고 표현한다.<br/>
 
-## 객체의 책임과 크기<<br/>
+## 객체의 책임과 크기<br/>
 - 객체는 객체가 제공하는 기능으로 정의된다. 이 말은 객체마다 자신만의 책임이 있다는 의미이다.<br/>
 - 한 객체가 갖는 책임을 정의한 것이 바로 타입/인터페이스라고 생각하면된다.<br/>
 - 객체가 갖는 책임을 어떻게 결정할지가 바로 객체 지향 설계의 출발점이다.<br/>
@@ -28,7 +28,7 @@ categories:
 * Tell, Don't Ask<br/>
 - 데이터를 물어보지 않고, 기능을 실행해 달라고 말하라는 규칙.<br/>
 - 기능 실행을 요청하는 방식으로 코드를 작성하다 보면, 자연스럽게 해당 기능을 어떻게 구현했는지 여부가 감춰진다.<br/>
-</blockquote>
+</blockquote><br/>
 <blockquote>
 * 데미테르의 법칙<br/>
 - 메서드에서 생성한 객체의 메서드만 호출<br/>
@@ -39,8 +39,8 @@ categories:
 ## 객체 지향 설계 과정<br/>
 <ul>1. 제공해야 할 기능을 찾고 또는 세분화하고, 그 기능을 알맞은 객체에 할당하한다.
 	<ul>
-		<li>1-1. 기능을 구현하는데 필요한 데이터를 개체에 추가한다. 객체에 데이터를 먼저 추가하고 그 데이터를 이용하는 기능을 넣을 수도 있다.</li>
-    	<li>1-2. 기능은 최대한 캡슐화해서 구현한다.</li>
+		<li>기능을 구현하는데 필요한 데이터를 개체에 추가한다. 객체에 데이터를 먼저 추가하고 그 데이터를 이용하는 기능을 넣을 수도 있다.</li>
+    	<li>기능은 최대한 캡슐화해서 구현한다.</li>
 	</ul>
 </ul>
 <ul>2. 객체 간에 어떻게 메시지를 주고받을 지 결정한다.</ul>
@@ -52,4 +52,5 @@ categories:
 - 메서드를 재정의하면, 해당 메서드를 실행할 때 상위타입의 메서드가 아닌 하위 타입에서 재정의한 메서드가 실행된다.<br/>
 - 다형성은 한 객체가 여러가지 모습을 갖는다는 것을 의미한다. 즉, 한 객체가 여러 타입을 가질 수 있다는 것을 뜻한다.<br/>
 
-		배운점 : 현재 업무를 개발할 때, 너무 데이터를 의존하여 개발한것 같다는 생각이 든다. 객체지향으로 설계할 수 있도록 다시 한번 코드를 보고, 설계를 해봐야겠다.
+		배운점 : 현재 업무를 개발할 때, 너무 데이터를 의존하여 개발한것 같다는 생각이 든다. 
+        객체지향으로 설계할 수 있도록 다시 한번 코드를 보고, 설계를 해봐야겠다.
