개발자가 정복해야할 객체지향 수정

--- a/_posts/2017-12-21-book4.md
+++ b/_posts/2017-12-21-book4.md
@@ -178,6 +178,58 @@ OutputStream out = new FileOutputStream(filePath); CopyItil.copy(is, out);
 - 리스코프 치환 원칙은 확장에 대한 것이다.<br/>
 - 리스코프 치환 원칙이 지켜지지 않으면 개방 폐쇄 원칙을 지킬 수 없게 된다. 그러면 기능 확장하기가 어렵게 된다.<br/>
 
+### 인터페이스 분리 원칙<br/>
+- 인터페이스는 그 인터페이스를 사용하는 클라이언트를 기준으로 분리해야 한다.<br/>
+- 자신이 사용하는 메서드에만 의존해야 한다.<br/>
+- 용도에 맞게 인터페이스를 분리하는 것은 단일 책임 원칙과도 연결된다.<br/>
 
-	배운점 : 이번부분은 이해가 잘되지않아 3번정도 다시 읽은 것같다. 그리하여 조금은 알게 된 것 같다. 항상 타입을 맞추거나 instead of 를 사용하여, 객체의 타입을 확인하곤 했는데, 그러한 습관을 고쳐야 겠다. 항상 상위타입으면 하위타입이 들어와도 동작할 수 있는 설계를 하자!
+#### 인터페이스 분리 원칙은 클라이언트에 대한 것<br/>
+- 인터페이스 분리 원칙은 클라이언트 입장에서 인터페이스를 분리하라는 원칙.<br/>
+- 각 클라이언트가 사용하는 기능을 중심으로 인터페이스를 분리함으로써, 클라이언트로부터 발생하는 인터페이스 변경의 여파가 다른 클라이언트에 미치는 영향을 최소화할 수 있다.<br/>
 
+### 의존 역전 원칙<br/>
+- 고수준 모듈은 저수준 모듈의 구현에 의존해서는 안된다. 저수준 모듈이 고수준 모듈에서 정의한 추상 타입에 의존해야한다.<br/>
+
+<blockquote>
+- 고수준 모듈 : 바이트 데이터를 읽어와 암호화하고 결과 바이트 데이터를 쓴다.
+- 저수준 모듈 : 파일에서 바이트 데이터를 읽어온다. / AES 알고리즘으로 암호화한다. / 파일에 바이트 데이터를 쓴다.<br/>
+</blockquote>
+
+- 고수준 모듈은 상대적으로 클 틀에서 프로그램을 다룬다면, 저수준 모듈은 각 개별 요소가 어떻게 구현될지에 대해서 다룬다.<br/>
+
+#### 의존 역전 원칙을 통한 변경의 유연함 확보<br/>
+- 저수준 모듈이 고수준 모듈을 의존하게 만들어서 해결한다. 방법은 추상화에 있다.<br/>
+- 의존 역전 원칙은 앞서 리스코프 치환 원칙과 함게 개방 폐쇄 원칙을 따르는 설계를 만들어 주는 기반이 된다.<br/>
+
+#### 소스 코드 의존과 런타임 의존<br/>
+```java
+public class FlowController {
+  	public void process() {
+    	//소스 코드에서 FileDataReader에 대한 의존 발생
+    	FileDataReader reader = new FileDataReader();
+  	}
+}
+//의존역전 원칙 적용 : 상세 구현에서 추상 타입에 의존
+public class FileDataReader implements ByteSource {
+	//....
+}
+```
+
+- 런타임의 의존이 아닌 소스 코드의 의존을 역전시킴으로써 변경의 유연함을 확보할 수 있도록 만들어 주는 원칙.<br/>
+
+#### 의존 역전 원칙과 패키지<br/>
+- 의존 역전 원칙은 타입의 소유도 역전시킨다.<br/>
+- 타입의 소유 역전은 각 패키지를 독립적으로 배포할 수 있도록 만들어 준다.<br/>
+
+## SOLID 정리<br/>
+- SOLID 원칙은 변화에 유연하게 대처할 수 있는 설계 원칙이다.<br/>
+- 단일 책임 원칙과 인터페이스 분리 원칙은 객체가 커지지 않도록 막아준다.<br/>
+- 리스코프 치환 원칙과 의존 역전 원칙은 개방 폐쇄 원칙을 지원한다.<br/>
+- 개방 폐쇄 원칙은 변화되는 부분을 추상화하고 다형성을 이용함으로써 기능 확장을 하면서도 기존 코드를 수정하지 않도록 만들어 준다.<br/>
+- 변화되는 부분을 추상화할 수 있도록 도와주는 원칙이 의존 역전 원칙이고, 다형성을 도와주는 원칙이 리스코프 치환 원칙이다.
+<br/>
+
+- SOLID 원칙은 사용자 입장에서의 기능 사용을 중시한다.<br/>
+<pre>
+<b>배운점 : 항상 사용자 입장에서 기능을 생각, 큰모듈을 먼저 생각하고 작은 모듈을 생각, 이러한 생각을 갖도록 해주었다.</b>
+</pre>
