--- a/_posts/2017-12-18-book1.md
+++ b/_posts/2017-12-18-book1.md
@@ -1,7 +1,7 @@
 ---
 title: 개발자가 정복해야 할 객체지향-1
 categories:
-- BOOK
+- BOOK/JAVA
 ---
 -소프트웨어를 구현한다는 것은 결국 최종적으로는 소프트웨어를 구성하는 데이터와 데이터를 조작하는 코드를 작성하는 것이다.
 <br/>
