--- a/_posts/2017-12-20-book3.md
+++ b/_posts/2017-12-20-book3.md
@@ -1,7 +1,7 @@
 ---
 title: 개발자가 정복해야 할 객체지향-3
 categories:
-- BOOK
+- BOOK/JAVA
 ---
 ## 추상 타입과 유연함<br/>
 - 추상화는 데이터나 프로세스 등을 의미가 비슷한 개념이나 표현으로 정의하는 과정이다.<br/>
