--- a/_posts/2017-12-21-book4.md
+++ b/_posts/2017-12-21-book4.md
@@ -1,7 +1,7 @@
 ---
 title: 개발자가 정복해야 할 객체지향-4
 categories:
-- BOOK
+- BOOK/JAVA
 ---
 ## 조립을 이용한 재사용<br/>
 - 객체 조립은 여러 객체를 묶어서 더 복잡한 기능을 제공하는 객체를 만들어 내는 것이다.<br/>
