JS 요약 추가 및 JAVA책 수정

--- a/_posts/2017-01-08-book-java-1.md
+++ b/_posts/2017-01-08-book-java-1.md
@@ -1,5 +1,5 @@
 ---
-title: 난 정말 자가블 공부한 적이 없다구요-1
+title: 난 정말 자바를 공부한 적이 없다구요-1
 categories:
 - BOOK/JAVA
 ---
@@ -19,14 +19,13 @@ categories:
 - 변수란 데이터의 저장고 참조를 위해 할당된 메모리공간으로 말할 수 있다.<br/>
 - int num; -> 10진수 정수의 저장을 위한 num이라는 이름의 공간을 할당하겠다.<br/>
 
-<blockquote>
-- boolean : 1byte
-- char : 2byte
-- short : 1byte
-- int : 4byte
-- long : 8byte
-- float : 4byte
-- double : 8byte
+<blockquote>- boolean : 1byte<br/>
+- char : 2byte<br/>
+- short : 1byte<br/>
+- int : 4byte<br/>
+- long : 8byte<br/>
+- float : 4byte<br/>
+- double : 8byte<br/>
 </blockquote>
 
 - 자료형의 선언은 메모리 공간의 데이터 자장 및 참조방식으로 결정하는 것으로 이해할 수 있다.<br/>
@@ -37,8 +36,7 @@ categories:
 - 기본적으로 모든 정수형 상수는 int형으로 표현 및 저장한다.<br/>
 - 상수를 리터럴이라고도 표현한다.<br/>
 
-<blockquote>
-- long num = 1000000000000; (컴파일 Error)
+<blockquote>- long num = 1000000000000; (컴파일 Error)<br/>
 : 상수는 기본적으로 int로 저장하므로, long num = 10000000000L; (뒤에 L을 붙인다. : Long형으로 표현 요청)
 </blockquote>
 
@@ -46,8 +44,7 @@ categories:
 - 자바에서는 자동 형변환과 명시적 형변환이 있다.<br/>
 - 자동 형변환<br/>
 
-<blockquote>
-double num1 = 20;
+<blockquote>double num1 = 20;<br/>
 - 자료형이 실수인 double형 이지만, 대입 대상이 되는 값이 int형 정수 20으로 자동으로 double형 실수 20.0으로 형변환되어 저장된다.
 </blockquote>
 
