--- a/_posts/2017-12-18-book1.md
+++ b/_posts/2017-12-18-book1.md
@@ -9,8 +9,7 @@ categories:
 ## 절차지향 프로그래밍<br/>
 -프로시저로 프로그램을 구성하는 기법을 절차지향 프로그래밍이라고한다.<br/>
 -절차지향은 데이터를 중심으로 한 프로시저로 구성된다.<br/>
-<blockquote>
-*성적평균을 계산하고 출력하는 프로그램<br/>
+<blockquote><b>*성적평균을 계산하고 출력하는 프로그램</b><br/>
 - '평균계산 프로시저'와 '화면출력 프로시저'는 데이터를 공유해서 사용한다. <br/>
 - 자연스럽게 데이터를 중심으로 구현된다.<br/>
 - 최초에는 코드를 구현하는 것이 쉽다. 하지만, 규모가 커질수록 수정이 힘들다.<br/>
@@ -26,8 +25,7 @@ categories:
 ### 객체<br/>
 -객체의 핵심은 기능을 제공하는 것<br/>
 -객체가 정의할 때 사용되는 것은 객체가 제공해야 할 기능이며, 객체가 내부적으로 어떤 데이터를 갖고 있는 지 정의되지 않는다.<br/>
-<blockquote>
-*소리크기 제어객체<br/>
+<blockquote><b>* 소리크기 제어객체</b><br/>
 - 소리크기 증가 / 감소 / 음소거 기능<br/>
 - 내부적으로 소리크기를 어떤 데이터 타입값으로 보관하는지는 중요하지 않다. 3개의 기능을 제공한다는 것이 중요할 뿐이다.<br/>
 </blockquote>
@@ -36,8 +34,7 @@ categories:
 -보통 객체가 제공하는 기능을 오퍼레이션이라고 부른다. 즉 객체는 오퍼레이션으로 정의된다.<br/>
 -객체가 제공하는 기능을 사용한다는 것은 결국 객체의 오퍼레이션을 사용한다는 의미가 된다.<br/>
 -객체가 제공하는 오퍼레이션을 사용할 수 있으려면, 그 사용법을 알아야한다.<br/>
-<blockquote>
-*소리크기 증가기능<br/>
+<blockquote><b>*소리크기 증가기능</b><br/>
 - 기능식별 이름 / 파라미터 및 파라미터 타입 / 기능 실행결과 값 : 시그너처<br/>
 </blockquote>
 
@@ -49,6 +46,4 @@ categories:
 
 
 	배운점 : 
-    절차지향이 그대로 소스순으로 늘여놓은게 아니라, 데이터를 중심으로 한 프로시저로 구성된 프로그래밍이라는 점.
-	SI같은 데이터의 정교함을 필요로하는 곳에서는 절차지향이 좀 더 편하게 사용할 수 있겠구나라고 생각하면서, 
-    한편으로는 고객의 니즈에 따라 변화가 많은 곳인데, 객체지향으로 설계를 하고 개발하는 사람이 적을까 라는 생각도 들었다.
+    절차지향이 그대로 소스순으로 늘여놓은게 아니라, 데이터를 중심으로 한 프로시저로 구성된 프로그래밍이라는 점. SI같은 데이터의 정교함을 필요로하는 곳에서는 절차지향이 좀 더 편하게 사용할 수 있겠구나라고 생각하면서, 한편으로는 고객의 니즈에 따라 변화가 많은 곳인데, 객체지향으로 설계를 하고 개발하는 사람이 적을까 라는 생각도 들었다.
