--- a/_posts/2017-12-20-book3.md
+++ b/_posts/2017-12-20-book3.md
@@ -5,8 +5,7 @@ categories:
 ---
 ## 추상 타입과 유연함<br/>
 - 추상화는 데이터나 프로세스 등을 의미가 비슷한 개념이나 표현으로 정의하는 과정이다.<br/>
-<blockquote>
-FTP에서 파일 다운로드 / 소켓으로 데이터 읽기 / DB 테이블을 조회 => 추상화 => 로그수집
+<blockquote>FTP에서 파일 다운로드 / 소켓으로 데이터 읽기 / DB 테이블을 조회 => 추상화 => 로그수집
 </blockquote>
 
 ## 추상 타입과 실제 구현의 연결<br/>
