--- a/_posts/2017-01-05-book-js-1.md
+++ b/_posts/2017-01-05-book-js-1.md
@@ -1,59 +1,118 @@
 ---
-title: 난 정말 자가블 공부한 적이 없다구요-1
+title: Learning JavaScript-1
 categories:
-- BOOK/JAVA
+- BOOK/JS
 ---
-<ul>
-<li> 일반적인 프로그램의 실행구조는 : 하드웨어 -> OS -> 프로그램이다. 다시 말해서 하드웨어 위에서 실행되는 운영체제가 프로그램을 실행시키는 구조이다.</li>
-<li> JAVA프로그램은 운영체제와 자바프로그램 사이에 자바 가상머신이 존재한다.</li>
-<li>자바가상머신에 의해 실행되는 구조로 설계한 이유는 운영체제에 상관없이 실행시키기 위함이다.</li>
-</ul>
 
+# 변수와 상수<br/>
+- 변수란 간단히 말해 이름이 붙은 값으로 언제든 바뀔 수 있다.<br/>
 
-# 자바 컴파일러와 자바 바이트코드<br/>
-- .java 파일을 가리켜 '소스파일'이라하고, 소스파일에 저장된 프로그램 코드를 가리켜 '소스코드'라 한다.<br/>
-- 자바 컴파일러(javac.exe)는 소스파일에 저장되어 있는 소스코드를 가상머신이 이해할 수 있는 '자바 바이트코드로'로 변환해주는 프로그램으로 정리할 수 있다.<br/>
-- java.exe는 자바 가상머신을 구동시키고, 그 위에 자바 프로그램이 실행되도록 돕는 프로그램이다.<br/>
+```js
+//let은 변수 선언에만 쓰이고, 각 변수는 한 번만 선언할 수 있다.(ES6에서 새로 생긴 것)
+let currentTempC = 22;
+```
 
-# 변수와 자료형<br/>
-- 변수란 데이터의 저장고 참조를 위해 할당된 메모리공간으로 말할 수 있다.<br/>
-- int num; -> 10진수 정수의 저장을 위한 num이라는 이름의 공간을 할당하겠다.<br/>
+- 초깃값을 할당하지 않으면 암시적으로 undefined가 할당된다.<br/>
 
-<blockquote>
-- boolean : 1byte
-- char : 2byte
-- short : 1byte
-- int : 4byte
-- long : 8byte
-- float : 4byte
-- double : 8byte
+```js
+//let targetTempC = undefiend와 같음
+let targetTempC;
+```
+
+- 상수는 변수와 마찬가지로 값을 할당받을 수 있지만, 한 번 할당한 값을 바꿀 수는 없다.(ES6에서 새로 생긴 것)<br/>
+
+```js
+//const는 상수 선언
+const TEMP_C = 30;
+```
+
+# 변수와 상수 중 어떤 것을 써야할까?<br/>
+- 될 수 있으면 변수보다 상수를 써야한다.<br/>
+- 데이터 값이 아무 때나 막 바뀌는 것보다는, 고정된 값이 이해하기가 쉽다.<br/>
+- 우선 상수를 먼저 생각하고, 그 상수의 값이 바뀌는 게 자연스럽다고 생각된다면, 언제든지 변수로 바꿀 수 있다.<br/>
+
+# 식별자 이름<br/>
+- 변수와 상수, 함수 이름을 식별자라고 한다.<br/>
+
+<blockquote><b>* 식별자 규칙</b><br/>
+1. 식별자는 반드시 글자나 달러 기호($), 밀줄(_)로 시작해야 한다.<br/>
+2. 실별자에는 글자와 숫자, 달러 기호, 밑줄만 쓸 수 있다.<br/>
+3. 파이나 시그마 같은 유니코드 문자도 쓸 수 있다.<br/>
+4. 예약어는 식별자로 쓸 수 없다.<br/>
 </blockquote>
 
-- 자료형의 선언은 메모리 공간의 데이터 자장 및 참조방식으로 결정하는 것으로 이해할 수 있다.<br/>
+- 자바스크립트에서는 $를 특수 문자로 사용하지 않는다.<br/>
 
-# 수와 형변환<br/>
-- 상수도 메모리 공간에 저장된다.<br/>
-- 이름이 없다. 그러므로 메모리에 저장된 상수의 값을 변경시킬 수 없다.<br/>
-- 기본적으로 모든 정수형 상수는 int형으로 표현 및 저장한다.<br/>
-- 상수를 리터럴이라고도 표현한다.<br/>
-
-<blockquote>
-- long num = 1000000000000; (컴파일 Error)
-: 상수는 기본적으로 int로 저장하므로, long num = 10000000000L; (뒤에 L을 붙인다. : Long형으로 표현 요청)
+<blockquote><b>* 식별자를 만들 때 염두해야 할 방침</b><br/>
+1. 식별자는 대문자로 시작해서는 안된다.<br/>
+2. 밑줄 한 개 또는 두개로 시작하는 식별자는 아주 특별항 상황, 또는 내부 변수에서만 사용한다.<br/>
+3. 제이쿼리 사용 시, 달러 기호로 시작하는 식별자는 보통 제이쿼리 객체라는 의미이다.<br/>
 </blockquote>
 
-- 형변환은 값의 표현 방식을 바꾸는 것이다.<br/>
-- 자바에서는 자동 형변환과 명시적 형변환이 있다.<br/>
-- 자동 형변환<br/>
+# 리터럴<br/>
+- 값을 프로그램 안에서 직접 지정한다는 의미. 값을 만드는 방법이다.<br/>
+- 리터럴과 식별자의 차이 : 자바스크립트는 따옴표를 통해 구별한다.<br/>
+```js
+// "conference_room_a"는 리터럴 / room1은 변수를 가리키는 식별자
+let room1 = "conference_room_a";
+// currentRoom의 값은 room1의 값과 같다.
+let currentRoom = room1;
+// ERROR : conference_room_a란 식별자는 존재하지 않는다.
+currentRoom = conference_room_a;
+```
 
-<blockquote>
-double num1 = 20;
-- 자료형이 실수인 double형 이지만, 대입 대상이 되는 값이 int형 정수 20으로 자동으로 double형 실수 20.0으로 형변환되어 저장된다.
+# 원시 타입과 객체<br/>
+- 자바스크립트의 값은 원시 값 또는 객체이다.<br/>
+- 원시타입은 불변이다.<br/>
+
+<blockquote><b>* 원시타입 종류</b><br/>
+1. 숫자<br/>
+2. 문자열<br/>
+3. 불리언<br/>
+4. null<br/>
+5. undefined<br/>
+6. 심볼<br/>
+</blockquote>
+```js
+//str은 불변의 값 "hello"로 초기화
+let str = "hello"
+//다시 새로운 불변의 값 "world"를 할당
+str = "world";
+```
+
+- 객체는 여러가지 형태와 값을 가질 수 있다.<br/>
+- 유연한 성질 때문에 데이터 타입을 만들 때 많이 사용.<br/>
+
+<blockquote><b>* 자바스크립트의 내장 객체 타입 종류</b><br/>
+1. Array<br/>
+2. Date<br/>
+3. RegExp<br/>
+4, Map과 WeakMap<br/>
+5. Set과 WeakSet<br/>
+6. Number (원시 타입 중 숫자와 대응)<br/>
+7. String (원시 타입 중 문자열과 대응)<br/>
+8. Boolean (원시 타입 중 불리언과 대응)<br/>
 </blockquote>
 
-- 자동 형변환은 데이터의 손실이 발생하지 않거나, 발생하더라도 그 손실이 제한적인 경우에만 자동 형 변환을 허용한다.<br/>
 
-
-<pre><b>배운점 : 자바에서 변수를 선언하고, 그 변수가 메모리에 어떤 식으로 저장되는지를 다시 한번 알게 되었다.또 상수와 기본적인 형변환에 대해 알게 되었다.  자동으로 형변환을 해서 저장되었을 때 어떤 기준으로 되는지도 알게 되었다.
-</b></pre>
-
+# 숫자<br/>
+- 자바스크립트는 10진수, 2진수, 8진수, 16진수의 네 가지 숫자형 리터럴을 인식한다.<br/>
+```js
+let count = 10; //숫자 리터럴, count는 더블이다.
+const blue = 0x0000ff; //16진수, 16진수 ff는 10진수 255와 같다.
+const umask = 0o0022; //8진수, 8진수 22는 십진수 18과 같다.
+const roomTemp = 21.5; //십진수
+const c = 3.0e6; // 지수 (3.0 * 10^6 = 3,000,000)
+const e = -1.6e-19; //지수 (-1.6 * 10^-19 = 0.00000000000000000016)
+const inf = Infinity;
+const ninf = -Infinity;
+const nan = NaN; //숫자가 아님
+const small = Number.EPSILON; // 1에 더했을 때 1과 구분되는 결과를 만들 수 있는 가장 작은 값.
+const bigInt = Number.MAX_SAFE_INTEGER; //표현할 수 있는 가장 큰 정수
+const max = Number.MAX_VALUE; //표현할 수 있는 가장 큰 숫자
+const minInt= Number.MIN_SAFE_INTEGER; //표현할 수 있는 가장 작은 정수
+const min = Number.MIN_VALUE; //표현할 수 있는 가장 작은 숫자
+const nInf= Number.NEGATIVE_INFINITY; //-Infinity
+const nan= Number.NaN; //Nan
+const inf= Number.POSITIVE_INFINITY; //Infinity
+```
