--- a/_posts/2017-12-19-book2.md
+++ b/_posts/2017-12-19-book2.md
@@ -24,12 +24,11 @@ categories:
 ## 캡슐화<br/>
 - 객체가 내부적으로 기능을 어떻게 구현하는지를 감추는 것이다.<br/>
 - 내부 구현 변경의 유연함을 주는 기법이다.<br/>
-<blockquote>
-* Tell, Don't Ask<br/>
+<blockquote><b>* Tell, Don't Ask</b><br/>
 - 데이터를 물어보지 않고, 기능을 실행해 달라고 말하라는 규칙.<br/>
 - 기능 실행을 요청하는 방식으로 코드를 작성하다 보면, 자연스럽게 해당 기능을 어떻게 구현했는지 여부가 감춰진다.<br/>
 <br/>
-* 데미테르의 법칙<br/>
+<b>* 데미테르의 법칙</b><br/>
 - 메서드에서 생성한 객체의 메서드만 호출<br/>
 - 파라미터로 받은 객체의 메서드만 호출<br/>
 - 필드로 참조하는 객체의 메서드만 호출<br/>
