--- a/_posts/2018-01-05-book-js-1.md
+++ b/_posts/2018-01-05-book-js-1.md
@@ -73,6 +73,7 @@ currentRoom = conference_room_a;
 5. undefined<br/>
 6. 심볼<br/>
 </blockquote>
+
 ```js
 //str은 불변의 값 "hello"로 초기화
 let str = "hello"
@@ -107,6 +108,10 @@ const e = -1.6e-19; //지수 (-1.6 * 10^-19 = 0.00000000000000000016)
 const inf = Infinity;
 const ninf = -Infinity;
 const nan = NaN; //숫자가 아님
+```
+
+- Number 객체의 프로퍼티
+```js
 const small = Number.EPSILON; // 1에 더했을 때 1과 구분되는 결과를 만들 수 있는 가장 작은 값.
 const bigInt = Number.MAX_SAFE_INTEGER; //표현할 수 있는 가장 큰 정수
 const max = Number.MAX_VALUE; //표현할 수 있는 가장 큰 숫자
@@ -116,3 +121,9 @@ const nInf= Number.NEGATIVE_INFINITY; //-Infinity
 const nan= Number.NaN; //Nan
 const inf= Number.POSITIVE_INFINITY; //Infinity
 ```
+
+# 문자열<br/>
+- 문자열은 텍스트 데이터이다.<br/>
+- 자바스크립트의 문자열 리터럴에는 작은따옴표, 큰따옴표, 백틱을 사용한다.<br/>
+
+## 이스케이프<br/>
