network book modify

--- a/_posts/2018-01-09-book-nt-1.md
+++ b/_posts/2018-01-09-book-nt-1.md
@@ -67,8 +67,56 @@ ftp.cyber.co.kr = FTP 서버의 도메인명<br/>
     </tr>
     <tr>
     	<td>GET</td>
+        <td><center>O</center></td>
+        <td><center>O</center></td>
+        <td>URI로 지정한 정보를 도출한다. 데이터를 그대로 반송한다.</td>
+    </tr>
+    <tr>
+    	<td>POST</td>
+        <td><center>O</center></td>
+        <td><center>O</center></td>
+        <td>클라이언트에서 서버로 데이터를 송신한다.</td>
+    </tr>
+    <tr>
+    	<td>HEAD</td>
+        <td><center>O</center></td>
+        <td><center>O</center></td>
+        <td>GET과 비슷. HTTP 메시지 헤더만 반송하고 데이터의 내용을 돌려보내지 않는다.</td>
+    </tr>
+    <tr>
+    	<td>OPTIONS</td>
+        <td><center></center></td>
+        <td><center>O</center></td>
+        <td>통신 옵션을 통지하거나 조사할 때 사용한다.</td>
+    </tr>
+    <tr>
+    	<td>PUT</td>
+        <td><center>△</center></td>
+        <td><center>O</center></td>
+        <td>URI로 지정한 서버의 파일을 치환한다.</td>
+    </tr>
+    <tr>
+    	<td>DELETE</td>
+        <td><center>△</center></td>
+        <td><center>O</center></td>
+        <td>URI로 지정한 파일을 삭제한다.</td>
+    </tr>
+    <tr>
+    	<td>TRACE</td>
         <td></td>
         <td><center>O</center></td>
-        <td>URI로 지정한 정보를 도출한다.</td>
+        <td>서버측에서 받은 리퀘스트 라인과 헤더를 그대로 클라이언트에 반송한다.</td>
+    </tr>
+    <tr>
+    	<td>CONNECT</td>
+        <td></td>
+        <td><center>O</center></td>
+        <td>암호화한 메시지를 프록시로 전송할 때 이용한다.</td>
     </tr>
 </table>
+
+- 리퀘스트 메시지가 웹서버에 도착하면 웹 서버는 메시지 내용을 해독한다.<br/>
+- 그 후 요구에 따라 동작하고, 결과 데이터를 응답 메시지에 저장한다.<br/>
+- 응답 메시지의 맨 앞부분에는 스테이터스 코드가 있다.ex) 404 Not Found<br/>
+- 헤더 파일과 페이지의 데이터가 이어지고, 응답 메시지를 클라이언트에 반송한다.<br/>
+- 클라이언트에게 도착하여 브라우저가 메시지의 안에서 데이터를 추출하여 화면에 표시하면서 HTTP 동작이 끝난다.<br/>
