--- a/_posts/2018-01-05-book-js-1.md
+++ b/_posts/2018-01-05-book-js-1.md
@@ -127,3 +127,45 @@ const inf= Number.POSITIVE_INFINITY; //Infinity
 - 자바스크립트의 문자열 리터럴에는 작은따옴표, 큰따옴표, 백틱을 사용한다.<br/>
 
 ## 이스케이프<br/>
+- 역슬래시(\)를 써서 이스케이프하면 문자열이 끝나지 않았다고 자바스크립트에 알릴 수 있다.<br/>
+
+# 템플리 문자열<br/>
+- 문자열 템플릿에는 큰따옴표나 작음따옴표를 쓰지 않고 백틱을 사용한다.<br/>
+- 문자열 템플릿 안에서는 달러 기호가 특수문자가 된다.
+```js
+let currentTemp = 19.5;
+const message = `The current temperature is ${currentTemp}\u00b0c`;
+```
+
+# 심볼<br/>
+- 유일한 토큰을 나타내기 위해 ES6에서 도입한 새 데이터 타입.<br/>
+- 심볼은 항상 유일하다.<br/>
+- 원시 값의 특징을 모두 가지고 있으므로 확정성 있는 코드를 만들 수 있다.<br/>
+
+# null과 undefined<br/>
+- null은 프로그래머에게 허용된 데이터 타입이며 undefined는 자바스크립트 자체에서 사용한다.<br/>
+- 변수를 선언하기만 하고 명시적으로 값을 할당하지 않으면 그 변수에는 기본적으로 undefined가 할당된다.<br/>
+```js
+let currentTemp; //암시적으로 undefined이다.
+const targetTemp = null; //대상 온도는 null, 즉 아직 모르는 값.
+currentTemp = 19.5; //currentTemp에는 이제 값이 있다.
+currentTemp = undefined; //currentTemp는 초기화되지 않았다.
+```
+
+# 객체 <br/>
+- 여러가지 값이나 복잡한 값을 나타낼 수 있으며, 변할 수도 있다.<br/>
+- 객체에도 주오갈호를 사용하는 리터럴 문법이 있다.<br/>
+```js
+const obj = {};
+obj.color = "yellow"; //객체의 콘텐츠는 프로퍼티또는 멤버라고 부른다. 프로퍼티는 이름과 값으로 구성
+obj["not an identifier"]=3;
+obj["not an identifier"]; //3
+obj["color"]; //yellow
+const SIZE = Symbol(); //심볼 프로퍼티에 접근할 떄도 대괄호를 사용
+obj[SIZE] = 8;
+obj[SIZE]; //8
+obj.speak = function(){ return "Meow!" } //객체에 함수를 담을 수도 있다.
+delete obj.speak; //객체에서 프로퍼티를 제거할 떄는 delete 연산자를 사용한다.
+
+# 배열<br/>
+```
