--- a/_posts/2018-01-10-arg-4.md
+++ b/_posts/2018-01-10-arg-4.md
@@ -11,11 +11,8 @@ categories:
 E는 최대값이 15, S는 28, M은 19이다.<br/>
 15년 = 15 15 15<br/>
 16년 = 1 16 16<br/>
-가능한 경우의 수 : 15 * 28 *19
+가능한 경우의 수 : 15 X 28 X 19
 </blockquote>
-
-
-
 
 <pre>
 배운점 : 이번 강의는 예시가 많아서 필기는 별로 못했다. 문제를 많이 풀어볼 것!
