modify and Javascript Add

--- a/_posts/2018-01-05-book-js-1.md
+++ b/_posts/2018-01-05-book-js-1.md
@@ -1,5 +1,5 @@
 ---
-title: Learning JavaScript-1
+title: 변수, 상수, 데이터타입[Learning JavaScript]
 categories:
 - BOOK/JS
 ---
@@ -168,4 +168,6 @@ obj.speak = function(){ return "Meow!" } //객체에 함수를 담을 수도 있
 delete obj.speak; //객체에서 프로퍼티를 제거할 떄는 delete 연산자를 사용한다.
 
 # 배열<br/>
-```
+- 배열 크기는 고정되지 않는다. 언제든 요소를 추가하거나 제거할 수 있다.<br/>
+- 요소의 데이터 타입을 가리지 않는다.<br/>
+- 배열 요소는 0으로 시작한다.
