modify and Javascript Add

--- a/_posts/2018-01-15-book-js-2.md
+++ b/_posts/2018-01-15-book-js-2.md
@@ -5,7 +5,7 @@ categories:
 ---
 # 제어문<br/>
 
-```js
+```javascript
 /* 크라운 앤 앵커
 * 평평한 면 위에 여섯개의 사각형이 있다.
 * 각 사각형에는 크라운, 앵커, 하트, 클럽, 스페이드, 다이아몬드를 나타내는 그림이 있다.
@@ -75,8 +75,7 @@ while( funds > 0 && funds < 100) { //while 문
   funds = funds - totalBet;
 
   console.log('\tbets : ' +
-                Object.keys(bets).map(face => `${face} : ${bets[face]} 						pence`).join(',') +
-                ` (total : ${totalBet} pence)`);
+                Object.keys(bets).map(face => `${face} : ${bets[face]} pence`).join(',') (total : ${totalBet} pence)`);
 
   //주사위를 굴린다
   const hand = [];
@@ -114,7 +113,7 @@ console.log(`\tending funds : ${funds}`);
 - (..) : '여기 들어갈 내용이 더 있다.'<br/>
 - 단어는 플레이스홀더로 사용
 
-```js
+```javascript
 //while문 :  condition이 참 같은 값이면 statement를 실행
 while(condition)
 	statement
@@ -141,7 +140,7 @@ for([initialization]; [condition]; [final-expression])
 - 쉼표 연사자를 쓰면 초기화와 마지막 표현식에 여러 문을 결합할 수 있다.
 
 
- ```js
+```javascript
  //피보나치 수열의 숫자 중 처음 여덟개를 출력
  for(let temp, i=0, j=1; j<30; temp=i, i=j, j=i+temp)
  	console.log(j);
@@ -149,7 +148,7 @@ for([initialization]; [condition]; [final-expression])
 
 - for 루프는 보통 정수 인덱스를 늘이거나 줄이면서 반복하지만, 어떤 표현식이든 쓸 수 있다.
 
-``` js
+```javascript
 let s = '3'; //숫자가 들어있는 문자열
 
 //문자열의 길이를 조건으로 사용.
