--- a/_posts/2018-01-15-book-js-2.md
+++ b/_posts/2018-01-15-book-js-2.md
@@ -75,7 +75,8 @@ while( funds > 0 && funds < 100) { //while 문
   funds = funds - totalBet;
 
   console.log('\tbets : ' +
-                Object.keys(bets).map(face => `${face} : ${bets[face]} pence`).join(',') (total : ${totalBet} pence)`);
+                Object.keys(bets).map(face => `${face} : ${bets[face]} pence`).join(',')+
+                `(total : ${totalBet} pence)`);
 
   //주사위를 굴린다
   const hand = [];
