--- a/_posts/2018-01-23-book-js-3.md
+++ b/_posts/2018-01-23-book-js-3.md
@@ -23,7 +23,7 @@ sayHello(); //hello World
 
 ```javascript
 function sayHello() {
-	return "heelo World";
+	return "hello World";
 }
 
 sayHello(); //hello World
@@ -34,5 +34,63 @@ sayHello(); //hello World
 - 괄호를 쓰지 않으면 다른 값과 마찬가지로 함수를 참조하고 함수를 실행하지 않는다.
 
 ```javascript
+sayHello(); //hello World
+sayHell; //function sayHello()
+```
 
+- 함수를 변수에 할당하면 다른 이름으로 함수를 호출할 수 있다.
+
+```js
+const f = sayHello;
+f(); //hello World
+```
+
+- 함수를 객체 프로퍼티에 할당할 수도 있다.
+
+```js
+const o = {};
+o.f = sayHello;
+o.f(); //hello World
+```
+
+- 배열요소로 할당할 수 있다.
+
+```js
+const arr = [1,2,3];
+arr[1] = sayHello; //arr은 [1, function sayHello(), 2]
+arr[1](); //hello World
+```
+
+## 함수와 매개변수<br/>
+```js
+//a와 b를 정해진 매개변수라고 한다.
+//함수가 호출되면 정해진 매개변수는 값을 받아 실제 매개변수가 된다.
+function avg(a, b) {
+	return (a+b)/2;
+}
+
+function f(o) {
+	o.message = "f에서 수정함";
+    o = {
+    	message : "새로운 객체"
+    };
+    console.log(`f 내부 : ${o.message}`)
+}
+
+let o ={
+	message : '초기값'
+};
+
+console.log(`f 호출 전 : ${o.message}`);
+
+f(o);
+console.log(`f 호출 후 : ${o.message}`);
+
+==출력
+f 호출 전 : 초기값
+f 내부 : 새로운 객체
+f 호출 후 : f에서 수정함
+
+//함수 내부의 매개변수 o와 함수 바깥의 변수 o가 다르다.
+//f를 호출하면 둘은 같은 객체를 가리키지만, f내부에서 o에 할당한 객체는 새로운 객체이다.
 ```
