--- a/_posts/2018-02-20-mysql.md
+++ b/_posts/2018-02-20-mysql.md
@@ -5,12 +5,14 @@ categories:
 ---
 
 ## 1. mysql 접속<br/>
+
 ```sql
 $ mysql -u root -p
 Enter Password;
 ```
 
 ## 2.mysql database 선택<br/>
+
 ```sql
 mysql > use mysql;
 
@@ -21,7 +23,20 @@ Database changed
 ## 3. 비밀번호 변경<br/>
 - update user set password=password('패스워드') 를 사용할 경우 password field를 찾을 수 없다는 에러 메세지가 출력된다.<br/>
 
+```sql
+mysql> update user set password=password('1111') where user = 'root';
+ERROR 1054 (42822) : Unknown column
+```
 
-```sql 
+- password field대신 authentication_string이라는 field가 존재한다.<br/>
 
+```sql
+ update user set uthentication_string=password('1111') where user = 'root';
+```
+
+## 4. 비밀번호 변경 적용<br/>
+
+```sql
+mysql > flush privileges;
+mysql > quit
 ```
