--- a/_posts/2018-02-26-DDD.md
+++ b/_posts/2018-02-26-DDD.md
@@ -42,7 +42,7 @@ categories:
   </tr>
   <tr>
     <td>인프라스트럭처(Infrastructure)</td>
-    <td>데이터베이스나 메시징 시스템과 같으 ㄴ외부 시스템과의 연동을 처리한다.</td>
+    <td>데이터베이스나 메시징 시스템과 같은 외부 시스템과의 연동을 처리한다.</td>
   </tr>
 </table>
 
@@ -163,10 +163,10 @@ public class Order {
 
 ```java
 public class OrderLine {
-  private Product product;
-  private int price;
-  private int quantity;
-  private int amounts;
+  private Product product; //상품
+  private int price;  //가격
+  private int quantity;  //수량
+  private int amounts; //구매가격
   
   public OrderLine(Prodect product, int price, int quantity) {
     this.product = product;
@@ -175,10 +175,49 @@ public class OrderLine {
     this.amounts = calculateAounts();
   }
   
+  //구매 가격 구하기
   private int calculateAounts() {
     return price * quantity;
   }
   
   public int getAmounts() {  }
+}
+```
+
+- 아래 항목은 Order와 OderLine과의 관계를 알려준다.<br/>
+
+<blockquote>- 최소 한 종류 이상의 상품을 주문해야 한다.<br/>
+- 총 주문 금액은 각 상품의 구매 가격 합을 모두 더한 금액이다.
+</blockquote>
+
+- 한 종류 이상의 상품을 주문할 수 있으므로 Order는 최소 한 개 이상의 OrderLine을 포함해야 한다.<br/>
+- OrderLine으로부터 총 주문 금액을 구할 수 있다.<br/>
+
+```java
+public class Oreder {
+  private List<OrderLine> ordrLines;
+  private int totalAmounts;
+  
+  public Order(List<OrederLine> orderLines) {
+    setOrderLines(orderLines);
+  }
+  
+  private void setOrderLines(List<OrderLine> orderLines) {
+    verifyAtLeastOneOrMoreOrderLines(orderLines);
+    this.orderLines = orderLines;
+    calculateTotalAmounts();
+  }
+  
+  private void verifyAtLeastOneOrMoreOrderLines(List<OrderLine> orderLine) {
+    if(orderLines == null || orderLines.isEmpty()) {
+      throw new Exception("no OrderLine");
+    }
+  }
+  
+  private void calculateTotalAmounts() {
+    this.totalAmounts = new Money(orderLines.stream()
+      .mapToInt(x -> x.getAmounts().getValue()).sum();
+  }
+  //....
 }
 ```
