--- a/_posts/2018-03-12-JPA.md
+++ b/_posts/2018-03-12-JPA.md
@@ -72,12 +72,12 @@ public class UserGroup {
   
   @Id
   @ManyToOne
-  @JoinColumn(name = "user_id", referencedColumnName = "user_id")
+  @JoinColumn(name = "user_id", referencedColumnName = "id") //user_id
   private User user;
   
   @Id
   @Column(name="group_id")
-  @JoinColumn(name = "group_id", referencedColumnName = "group_id")
+  @JoinColumn(name = "group_id", referencedColumnName = "id") //group_id
   private Group group;
 
   // ...getter and setter
